<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.roomie.presentation.finance.overview.TransactionsViewModel" />
        <variable
            name="isEmpty"
            type="boolean" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:context=".presentation.finance.overview.OverviewFragment" >

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swiperefresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_finance_transactions"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:clipToPadding="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"

                tools:listitem="@layout/item_transaction" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_add_transaction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="24dp"
                android:src="@drawable/btn_add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="Add" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            app:isVisible="@{isEmpty}">

            <ImageView
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/empty_transactions"/>
            <TextView
                android:id="@+id/label_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:text="@string/label_empty_heading_transactions" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_empty_transactions"
                android:layout_marginBottom="8dp"
                android:textSize="16dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_empty"
                android:textColor="?android:attr/colorBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_empty_transactions"/>
        </LinearLayout>

    </RelativeLayout>
</layout>